Feat/ Added animation on main section
1. 메인 섹션 타이핑 효과 추가
2. 프로젝트 디테일 페이지 스타일 추가

--- a/components/layout/styles.css
+++ b/components/layout/styles.css
@@ -1,40 +1,29 @@
 .hamburger {
-  cursor: pointer;
-  width: 24px;
-  height: 24px;
-  transition: all 0.25s;
-  position: relative;
+  @apply cursor-pointer w-6 h-6 transition-all duration-100 relative;
 }
 
 .hamburger-top,
 .hamburger-middle,
 .hamburger-bottom {
-  position: absolute;
-  width: 24px;
-  height: 2px;
-  top: 4px;
-  left: 0;
-  background: black;
-  transform: rotate(0);
-  transition: all 0.5s;
+  @apply absolute w-6 h-[2px] top-1 left-0 bg-black transform rotate-0 transition-all duration-100;
 }
 
 .hamburger-middle {
-  transform: translateY(7px);
+  @apply transform translate-y-[7px];
 }
 
 .hamburger-bottom {
-  transform: translateY(14px);
+  @apply transform translate-y-[14px];
 }
 
 .open.hamburger-top {
-  transform: rotate(45deg) translateY(6px) translateX(6px);
+  @apply transform rotate-45 translate-y-[6px] translate-x-[6px];
 }
 
 .open.hamburger-middle {
-  display: none;
+  @apply hidden;
 }
 
 .open.hamburger-bottom {
-  transform: rotate(-45deg) translateY(6px) translateX(-6px);
+  @apply transform -rotate-45 translate-y-[6px] translate-x-[6px];
 }
