Style/Updated the project section
프로젝트 박스 및 프로젝트 페이지 스타일 수정

--- a/components/projects/styles.css
+++ b/components/projects/styles.css
@@ -1,7 +1,10 @@
 .read-more-box {
-  @apply p-6 space-y-4;
+  @apply px-[10%] p-6 space-y-4;
 }
 
 .read-more-title {
-  @apply text-3xl font-semibold;
+  @apply text-3xl font-normal;
+}
+
+.stack-text {
 }
